<resources>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_clear">Clear</string>
    <string name="action_close">Close</string>
    <string name="action_configure_stock_retrieval_intervals">Stock retrieval time intervals</string>
    <string name="action_delete">Delete</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_stock_buy">Register purchase</string>>
    <string name="action_stock_buy_short">B</string>>
    <string name="action_stock_sell">Register sale</string>>
    <string name="action_stock_sell_short">S</string>>
    <string name="action_stocks_supported">Supported stocks</string>

    <string name="app_name">Crom Fortune</string>

    <string name="dashboard_title">Dashboard</string>
    <plurals name="dashboard_croms_will_message">
        <item quantity="zero">You don\'t follow the will of Crom at all!</item>
        <item quantity="one">You follow the will of Crom to the extent of a single percent</item>
        <item quantity="other">You follow the will of Crom to the extent of %1$s\%%</item>
    </plurals>
    <string name="generic_acquisition_value">Acquisition value</string>
    <string name="generic_commission_fee">Commission fee</string>
    <string name="generic_date">Date</string>
    <string name="generic_dialog_title_are_you_sure">Are you sure?</string>
    <string name="generic_error_empty">Enter a value.</string>
    <string name="generic_error_invalid_date">Enter a valid date.</string>
    <string name="generic_error_invalid_currency_symbol">Enter a valid currency symbol.</string>
    <string name="generic_error_invalid_number">Enter a valid number.</string>
    <string name="generic_error_invalid_stock_symbol">Enter a valid stock symbol.</string>
    <string name="generic_error_invalid_time_interval">Invalid time interval.</string>
    <string name="generic_error_not_supported">This feature is not yet supported.</string>
    <string name="generic_hint">Select</string>
    <string name="generic_price_per_stock">Price per stock</string>
    <string name="generic_profit">Profit</string>
    <string name="generic_saved">Saved successfully</string>
    <string name="generic_time_start_label">From</string>
    <string name="generic_time_end_label">Until</string>
    <string name="generic_title_latest">Latest</string>
    <string name="generic_title_name">Name</string>
    <string name="generic_title_quantity">#</string>
    <string name="generic_title_stock_orders">Transactions</string>
    <string name="generic_title_total_cost">Total Cost</string>
    <string name="generic_title_total">Total</string>
    <string name="generic_to_do">To do</string>
    <string name="generic_update_completed">An update has just been downloaded.</string>
    <string name="generic_urge_buy">Buy!</string>
    <string name="generic_urge_sell">Sell!</string>

    <string name="home_add_commission_fee_label">Commission fee (in SEK)</string>
    <string name="home_add_stock_currency_label">Currency</string>
    <string name="home_add_stock_date_label">Date</string>
    <string name="home_add_stock_name_label">Name</string>
    <string name="home_add_stock_quantity_label">Quantity</string>
    <string name="home_add_stock_message">Add one purchase order at a time.</string>
    <string name="home_delete_stock_order">This will delete the transaction for the following date %1$s.</string>
    <string name="home_delete_all_stock_orders">This will delete all transactions for the following stock: %1$s.</string>
    <string name="home_information_data_refreshed">The app is now refreshed with the latest rates. Note: Refreshes automatically every hour.</string>
    <string name="home_remove_commission_fee_label">Commission fee (in SEK)</string>
    <string name="home_remove_stock_currency_label">Currency</string>
    <string name="home_remove_stock_date_label">Date</string>
    <string name="home_remove_stock_name_label">Name</string>
    <string name="home_remove_stock_quantity_error_insufficient">You don\'t have this much.</string>
    <string name="home_remove_stock_quantity_label">Quantity</string>
    <string name="home_remove_stock_message">Add one sale order at a time.</string>
    <string name="home_no_stocks">Add your first stock to get filthy rich!</string>
    <string name="home_sort_alphabetical_down">A-Z</string>
    <string name="home_sort_alphabetical_up">Z-A</string>
    <string name="home_sort_profit_up">Best profit</string>
    <string name="home_sort_profit_down">Worst profit</string>
    <string name="home_stocks">You have added stocks. Not shown (not yet implemented).</string>
    <string name="home_stocks_personal_title">Yours</string>
    <string name="home_stocks_crom_title">Croms</string>
    <string name="home_title">Home</string>

    <string name="notification_channel_name">Crom Fortune Events</string>
    <string name="notification_recommendation_body_buy">You are recommended to buy %1$d of %2$s at %3$s %4$s (commission fee %5$d SEK)</string>
    <string name="notification_recommendation_body_sell">You are recommended to sell %1$d of %2$s at %3$s %4$s (commission fee %5$d SEK)</string>
    <string name="notification_recommendation_title">Recommendation</string>
    <string name="notifications_old_title">Old Notifications</string>
    <string name="notifications_new_title">Current Notifications</string>
    <string name="notifications_empty">There are no notifications</string>
    <string name="notifications_title">Notifications</string>

    <string name="recommendations_none">No recommendations</string>

    <string name="settings_title">Settings</string>
    <string name="settings_default_values">Default values</string>
    <string name="settings_dialog_time_intervals_title">Time interval during which Crom Fortune should fetch stock rates</string>


</resources>
