<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

    <item
            android:id="@+id/action_sort_alphabetical_down"
            android:icon="@drawable/ic_fas_sort_alpha_down"
            android:title="@string/home_sort_alphabetical_down"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction"
            />

    <item
            android:id="@+id/action_sort_alphabetical_up"
            android:icon="@drawable/ic_fas_sort_alpha_up"
            android:title="@string/home_sort_alphabetical_up"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction"
            />

    <item
            android:id="@+id/action_sort_profit_up"
            android:icon="@drawable/ic_fas_sort_numeric_up"
            android:title="@string/home_sort_profit_up"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction"
            />

    <item
            android:id="@+id/action_sort_profit_down"
            android:icon="@drawable/ic_fas_sort_numeric_down"
            android:title="@string/home_sort_profit_down"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction"
            />

</menu>
