<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_white_selectable_item_background"
        android:clickable="true"
        android:columnCount="5"
        android:focusable="true"
        >

    <TextView
            android:id="@+id/textView_listrowStockOrderHeader_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:maxLines="2"
            android:text="@string/generic_date"
            android:textSize="12sp"
            android:textStyle="bold"
            />

    <TextView
            android:id="@+id/textView_listrowStockOrderHeader_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:maxLines="2"
            android:text="@string/generic_title_quantity"
            android:textSize="12sp"
            android:textStyle="bold"
            />

    <TextView
            android:id="@+id/textView_listrowStockOrderHeader_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:maxLines="2"
            android:text="@string/generic_price_per_stock"
            android:textSize="12sp"
            android:textStyle="bold"
            />

    <TextView
            android:id="@+id/textView_listrowStockOrderHeader_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:maxLines="2"
            android:text="@string/generic_title_total_cost"
            android:textSize="12sp"
            android:textStyle="bold"
            />

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:maxLines="2"
            android:text=""
            android:textSize="12sp"
            android:textStyle="bold"
        />

</GridLayout>
